--- a/client/package.json
+++ b/client/package.json
@@ -47,5 +47,8 @@
   "devDependencies": {
     "tailwindcss": "^3.3.3"
   },
-  "proxy":"http://localhost:5000/"
+  "options":{
+    "allowedHosts":["localhost",".localhost"],
+    "proxy":"http://localhost:5000/"
+  }
 }
